ingress/part01/webapp-pay-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-pay-service
  namespace: critical-space
spec:
  type: ClusterIP
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: webapp-pay
  sessionAffinity: None
